--- a/src/app/ui/styles/arrivals.module.css
+++ b/src/app/ui/styles/arrivals.module.css
@@ -12,7 +12,14 @@
 .container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 100px 20px 50px 20px;
+  padding: 120px 20px 50px 20px;
+  font-family: system-ui, -apple-system, sans-serif;
+}
+
+.limitcontainer {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0px 20px 50px 20px;
   font-family: system-ui, -apple-system, sans-serif;
 }
 
@@ -26,8 +33,8 @@
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
-  gap: 2rem;
+  grid-template-columns: repeat(auto-fill, minmax(221px, 1fr));
+  gap: 24px;
 }
 
 /* --- Card Styling --- */
