--- a/src/app/ui/styles/footer.module.css
+++ b/src/app/ui/styles/footer.module.css
@@ -51,6 +51,13 @@
 
 /* --- Social Media Links Container --- */
 .footerLinks {
+  width: 67%;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.25);
+  border-radius: 25px;
+  padding: 0 80px;
+  background: white;
+  align-items: center;
+  justify-content: center;
   display: flex;
   gap: 25px;
 }
