--- a/src/app/ui/styles/register.module.css
+++ b/src/app/ui/styles/register.module.css
@@ -21,10 +21,10 @@
 
 /* --- Registration Card Container --- */
 .registerCard {
-  margin: 25%;
-  /* width: 100%; */
-  max-width: 450px; /* Slightly wider card for more inputs */
-  padding: 0.8rem 2.5rem;
+  margin: 0 auto;
+  width: 60%;
+  /* max-width: 450px; Slightly wider card for more inputs */
+  padding: 7rem 2.5rem;
   /* background: white; */
   border-radius: 16px;
   box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.05);
